--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/parkr/hubot-github-pages/issues"
   },
-  "homepage": "https://github.com/parkr/hubot-github-pages"
+  "homepage": "https://github.com/parkr/hubot-github-pages",
+  "dependencies": {
+    "githubot": "~0.5.0"
+  }
 }
