--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
   "homepage": "https://github.com/parkr/hubot-github-pages",
   "dependencies": {
     "githubot": "~0.5.0",
-    "timeago": "~0.1.0"
+    "timeago.js": "~2.0.2"
   }
 }
